VULA-602 use commons-validator